upgraded github actions

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -2,33 +2,31 @@ name: "Nix Build"
 on:
   pull_request:
   push:
+    branches: [development, master]
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: cachix/install-nix-action@v6
+    - uses: actions/checkout@v2
+    - uses: cachix/install-nix-action@v8
     - name: free disk space
       run: |
         sudo rm -rf /opt
-    - uses: cachix/cachix-action@releases/v3
+    - uses: cachix/cachix-action@v6
       with:
         name: validity
-        skipNixBuild: true
-    - uses: cachix/cachix-action@releases/v3
+    - uses: cachix/cachix-action@v6
       with:
         name: cursor
-        skipNixBuild: true
-    - uses: cachix/cachix-action@releases/v3
+    - uses: cachix/cachix-action@v6
       with:
         name: mergeful
-        skipNixBuild: true
-    - uses: cachix/cachix-action@releases/v3
+    - uses: cachix/cachix-action@v6
+      with:
+        name: yamlparse
+    - uses: cachix/cachix-action@v6
       with:
         name: smos
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
-    - uses: cachix/cachix-action@releases/v3
-      with:
-        name: smos
-        file: nix/release.nix
-        signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
+    - run: nix-build default.nix
+    - run: nix-build nix/release.nix
