Yamlparser for the applicative parts of smos files and nicer docs about it

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -11,19 +11,24 @@ library:
   source-dirs: src
   dependencies:
   - base >= 4.7
+  - bytestring
   - cmark-gfm
   - conduit
+  - containers
   - data-default
   - optparse-applicative
   - path
   - path-io
   - shakespeare
   - smos
+  - smos-data
   - smos-query
   - template-haskell
   - text
   - th-lift-instances
   - time
+  - yaml
+  - yamlparse-applicative
   - yesod
   - yesod-static
 
