--- a/stack.yaml
+++ b/stack.yaml
@@ -25,10 +25,6 @@ packages:
 - smos-sync-client
 - smos-sync-client-gen
 
-- /home/syd/src/mergeful/mergeful
-- /home/syd/src/mergeful/mergeful-persistent
-- /home/syd/src/mergeful/genvalidity-mergeful
-
 extra-deps:
 - hakyll-4.13.0.1@sha256:0f27d74feaedc96648ec5377ecec2b35dd677516c9667d179462a350f2075628,8817
 - hakyll-sass-0.2.4@sha256:4d2fbd8b63f5ef15483fc6dda09e10eefd63b4f873ad38dec2a3607eb504a8ba,939
@@ -72,11 +68,12 @@ extra-deps:
     - persistent-template
     - persistent-sqlite
 
-# - github: NorfairKing/mergeful
-#   commit: 4e3cf189c76d04daf9c26267a64523ec8bb071aa
-#   subdirs:
-#     - mergeful
-#     - genvalidity-mergeful
+- github: NorfairKing/mergeful
+  commit: 7f6488b400c736511da1570d40edc6a9eeb1168d
+  subdirs:
+    - mergeful
+    - mergeful-persistent
+    - genvalidity-mergeful
 - github: ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
 - github: NorfairKing/pretty-relative-time
