don't build on nixos afterall

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
+          # - macos-latest # Fails with a 'non-portable path to file' error
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v8
