--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -83,6 +83,8 @@ tests:
     - bytestring
     - cursor
     - cursor-gen
+    - cursor-dirforest
+    - cursor-dirforest-gen
     - genvalidity
     - genvalidity-containers
     - genvalidity-hspec
