moved the file browser into its own module

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -19,6 +19,8 @@ library:
   - QuickCheck
   - base
   - cursor
+  - cursor-dirforest
+  - cursor-dirforest-gen
   - cursor-fuzzy-time
   - cursor-fuzzy-time-gen
   - cursor-gen
