--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -44,6 +44,7 @@ tests:
     dependencies:
     - QuickCheck
     - cursor
+    - cursor-gen
     - cursor-fuzzy-time
     - cursor-fuzzy-time-gen
     - genvalidity-hspec
