one job at a time for the stack ci

--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build
         run: |
-          stack install --system-ghc autoexporter && stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+          stack install --system-ghc autoexporter && stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --jobs 1
 
       - name: Test
         run: |
