--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -32,10 +32,23 @@ library:
   - yesod-static
   - filepath
 
-
 executables:
   smos-web-server:
     main: Main.hs
     source-dirs: app
     dependencies:
     - smos-web-server
+
+tests:
+  smos-web-server-test:
+    main: Spec.hs
+    source-dirs: test
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - hspec
+    - monad-logger
+    - smos-web-server
+    - yesod-test
