docs about smos-web-server

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -28,6 +28,7 @@ library:
   - smos-server
   - smos-single
   - smos-sync-client
+  - smos-web-server
   - template-haskell
   - text
   - th-lift-instances
