--- a/.github/workflows/stack-build.yml
+++ b/.github/workflows/stack-build.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Build frontend
         run: |
-          cd smos-web-web-server/front && nix-shell --run "yarn bundle"
+          cd smos-web-server/front && nix-shell --run "yarn bundle"
 
       - name: Build
         run: |
