docs for the smos-scheduler, eventhough it's not done yet

--- a/smos-docs-site/package.yaml
+++ b/smos-docs-site/package.yaml
@@ -27,6 +27,7 @@ library:
   - smos-query
   - smos-report
   - smos-server
+  - smos-scheduler
   - smos-single
   - smos-sync-client
   - smos-web-server
