--- a/smos-web-server/front/package.json
+++ b/smos-web-server/front/package.json
@@ -12,6 +12,7 @@
     "test": "spago test"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
