better passwords using the password package

--- a/smos-api/package.yaml
+++ b/smos-api/package.yaml
@@ -26,6 +26,8 @@ library:
   - path
   - path-io
   - path-pieces
+  - password
+  - password-instances
   - persistent
   - persistent-sqlite
   - pretty-show
