--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -66,5 +66,6 @@ tests:
     - servant-client
     - smos-client
     - smos-client-gen
+    - smos-report
     - smos-server
     - smos-server-gen
