--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -3,7 +3,7 @@ version: '0.0.0.0'
 category: Smos
 author: Tom Sydney Kerckhove
 maintainer: syd@cs-syd.eu
-copyright: ! 'Copyright: (c) 2019 Tom Sydney Kerckhove'
+copyright: ! 'Copyright: (c) 2019-2020 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
@@ -15,12 +15,15 @@ library:
   ghc-options: -Wall
   dependencies:
   - QuickCheck
+  - bytestring
   - containers
+  - genvalidity
+  - genvalidity-bytestring
+  - genvalidity-path
   - hspec
   - hspec-core
   - http-client
   - http-types
-  - mergeful
   - mergeful
   - microlens
   - monad-logger
@@ -34,7 +37,10 @@ library:
   - smos-api-gen
   - smos-client
   - smos-client-gen
+  - smos-data
+  - smos-data-gen
   - smos-server
+  - smos-sync-client
   - stm
   - text
   - uuid
