sync request refactor

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -71,6 +71,7 @@ tests:
     - path
     - path-io
     - persistent-sqlite
+    - pretty-show
     - resource-pool
     - servant-client
     - smos-data-gen
