--- a/stack.yaml
+++ b/stack.yaml
@@ -27,6 +27,10 @@ packages:
 - smos-sync-client-gen
 - smos-web-server
 
+
+  # - /home/syd/src/mergeful/mergeful
+  # - /home/syd/src/mergeful/mergeful-persistent
+  # - /home/syd/src/mergeful/genvalidity-mergeful
 extra-deps:
 - envparse-0.4.1@sha256:989902e6368532548f61de1fa245ad2b39176cddd8743b20071af519a709ce30,2842
 - servant-flatten-0.2@sha256:276896f7c5cdec5b8f8493f6205fded0cc602d050b58fdb09a6d7c85c3bb0837,1234
