generate more interesting stores to test the web reports

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -18,6 +18,7 @@ library:
   - bytestring
   - containers
   - genvalidity
+  - genvalidity-containers
   - genvalidity-bytestring
   - genvalidity-path
   - hspec
