Fetch and update api

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -71,6 +71,7 @@ tests:
     - persistent-sqlite
     - resource-pool
     - servant-client
+    - smos-data-gen
     - smos-client
     - smos-client-gen
     - smos-report
