--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -62,6 +62,7 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -optP-Wno-nonportable-include-path # For macos
     dependencies:
     - base
     - smos
