only run ci on certain branches

--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -2,6 +2,10 @@ name: "Nix Build"
 on:
   pull_request:
   push:
+    branches:
+      - development
+      - master
+
 jobs:
   nix-build:
     name: ${{ matrix.os }} / Nix
