a docs site in the web server

--- a/smos-web-server/.gitignore
+++ b/smos-web-server/.gitignore
@@ -2,6 +2,6 @@
 smos-server.cabal
 *~
 signing-key.json
-smos-server-database.sqlite3
+smos-server-database.sqlite3*
 smos-server-uuid.json
 logins.json
