fixed the next action report entering

--- a/smos-report-cursor-gen/package.yaml
+++ b/smos-report-cursor-gen/package.yaml
@@ -37,6 +37,7 @@ tests:
     - QuickCheck
     - base
     - genvalidity-hspec
+    - genvalidity-hspec-optics
     - genvalidity-path
     - hspec
     - smos-data-gen
