--- a/smos-calendar-import/package.yaml
+++ b/smos-calendar-import/package.yaml
@@ -19,10 +19,12 @@ library:
     - data-default
     - envparse
     - fuzzy-time
-    - http-conduit
+    - http-client
+    - http-client-tls
     - iCalendar
     - microlens
     - mtl
+    - network-uri
     - optparse-applicative
     - path
     - path-io
