--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -7,12 +7,14 @@ copyright: ! 'Copyright: (c) 2019 Tom Sydney Kerckhove'
 license: MIT
 homepage: https://github.com/NorfairKing/smos
 
+dependencies:
+- base
+
 library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
     - aeson
-    - base
     - bytestring
     - containers
     - cron
@@ -26,6 +28,8 @@ library:
     - smos-report
     - text
     - time
+    - validity
+    - validity-text
     - yaml
     - yamlparse-applicative
 
@@ -34,5 +38,21 @@ executables:
     main: Main.hs
     source-dirs: app
     dependencies:
-    - base
     - smos-scheduler
+
+tests:
+  smos-scheduler-test:
+    main: Spec.hs
+    source-dirs: test/
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
+    dependencies:
+    - genvalidity-hspec
+    - genvalidity-text
+    - genvalidity
+    - hspec
+    - smos-scheduler
+
