--- a/smos-scheduler/package.yaml
+++ b/smos-scheduler/package.yaml
@@ -52,9 +52,13 @@ tests:
     - -with-rtsopts=-N
     - -Wall
     dependencies:
-    - genvalidity-hspec
-    - genvalidity-text
     - genvalidity
+    - genvalidity-containers
+    - genvalidity-hspec
+    - genvalidity-path
+    - genvalidity-text
+    - genvalidity-time
     - hspec
+    - mtl
+    - smos-data-gen
     - smos-scheduler
-
