set up a project skeleton

--- a/stack.yaml
+++ b/stack.yaml
@@ -16,6 +16,7 @@ packages:
 - smos-archive
 - smos-convert-org
 - smos-calendar-import
+- smos-asciinema
 - smos-docs-site
 - smos-api
 - smos-api-gen
