--- a/smos-asciinema/package.yaml
+++ b/smos-asciinema/package.yaml
@@ -14,6 +14,7 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+    - bytestring
     - containers
     - envparse
     - optparse-applicative
